--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Церемония бракосочетания: Арген и Адинай"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.icon" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Приглашение на торжество!</title>
   </head>
